--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,40 @@
 body {
   margin: 0;
-  padding: 0;
+  padding: 50px;
   font-family: sans-serif;
+}
+
+.form {
+  width: 100%
+}
+
+input {
+  width: 300px; 
+  padding: 7px; 
+  border: 1px solid gray; 
+  border-radius: 5px; 
+  font-size: 12px; 
+}
+
+.form-button {
+  padding: 8px 15px; 
+  border: 0px; 
+  border-radius: 5px; 
+  font-size: 12px; 
+  color: white; 
+  margin-left: 5px; 
+  background-color: grey;  
+}
+
+.container {
+  width: 400px;
+  margin-left: auto; 
+  margin-right: auto;  
+}
+
+.results {
+  display: inline-block; 
+  background-color: grey; 
+  width: 100%; 
+  margin: 0px; 
 }
