--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
   padding: 50px;
   font-family: sans-serif;
+  background: url(background.jpg) no-repeat center fixed; 
+  -webkit-background-size: cover; 
+  -o-background-size: cover; 
+  -moz-background-size: cover; 
 }
 
 .form {
@@ -34,7 +38,14 @@ input {
 
 .results {
   display: inline-block; 
-  background-color: grey; 
-  width: 100%; 
-  margin: 0px; 
+  background-color: #dadfe8; 
+  border: 1px solid #bfc4cc; 
+  width: 311px; 
+  border-radius: 5px; 
+  margin: 10px auto; 
+  padding: 30px; 
+}
+
+ul {
+  padding: 0px; 
 }
