--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,14 @@ input {
   padding: 30px; 
 }
 
+.title {
+  font-family: 'Oswald', sans-serif;
+  color: white; 
+  text-align: center; 
+  font-size: 50px;
+  margin: 20px;  
+}
+
 ul {
   padding: 0px; 
 }
