--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 input {
-  width: 300px; 
+  width: 325px; 
   padding: 7px; 
   border: 1px solid gray; 
   border-radius: 5px; 
@@ -26,7 +26,8 @@ input {
   border-radius: 5px; 
   font-size: 12px; 
   color: white; 
-  margin-left: 5px; 
+  margin-left: 5px;
+  margin-right: 0px;  
   background-color: grey;  
 }
 
@@ -40,10 +41,15 @@ input {
   display: inline-block; 
   background-color: #dadfe8; 
   border: 1px solid #bfc4cc; 
-  width: 311px; 
+  width: 340px; 
   border-radius: 5px; 
   margin: 10px auto; 
   padding: 30px; 
+}
+
+.spinner {
+  margin-top: 30px;  
+  text-align: center;  
 }
 
 .title {
