--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 50px;
+  padding: 80px;
   font-family: sans-serif;
   background: url(background.jpg) no-repeat center fixed; 
   -webkit-background-size: cover; 
@@ -37,6 +37,13 @@ input {
   margin-right: auto;  
 }
 
+.logo {
+  width: 400px; 
+  display: block; 
+  margin: 0px auto 50px auto; 
+  margin-right: auto;
+}
+
 .results {
   display: inline-block; 
   background-color: #dadfe8; 
@@ -50,14 +57,6 @@ input {
 .spinner {
   margin-top: 30px;  
   text-align: center;  
-}
-
-.title {
-  font-family: 'Oswald', sans-serif;
-  color: white; 
-  text-align: center; 
-  font-size: 50px;
-  margin: 20px;  
 }
 
 ul {
