background color added

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ input {
 
 .results {
   display: inline-block; 
-  background-color: #dadfe8; 
+  background-color: rgba(218, 223, 232, 0.9); 
   border: 1px solid #bfc4cc; 
   width: 100%; 
   border-radius: 5px; 
